<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <Gallery
        android:id="@+id/coldGallery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnV"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:layout_marginTop="5dp"
        android:onClick="onClickV"
        android:soundEffectsEnabled="true"
        android:text="@string/visualizer"
        android:textSize="15sp" />
    

    <ImageView
        android:id="@+id/coldRemix1"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/remix1"
        android:src="@drawable/coldplay_remix1" />

    <TextView
        android:id="@+id/tvColdMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Cold_Music"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRemix1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickPlayOne"
        android:text="@string/Play_Music"
        android:textSize="15sp" />
    
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvTimeTotalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_length"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/music_length"
            android:textSize="15sp"
            android:typeface="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvTimeNowLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_time_label"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvTimeNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/current_time"
            android:textSize="15sp" />
    </LinearLayout>
    </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/coldRemix2"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/remix2"
        android:src="@drawable/coldplay_remix2" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Coldplay_remix2"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRemix2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickPlayTwo"
        android:text="@string/Play_Music"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/TextView05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/music_length"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvTime2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/music_length"
                    android:textSize="15sp"
                    android:typeface="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_time_label"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvTimeNow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/current_time"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/twitter"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/remix2"
            android:src="@drawable/logo_twitter" />

        <Button
            android:id="@+id/btnTwit"
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:onClick="onClickTwit"
            android:text="@string/twitter"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>
</ScrollView>