<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/twitter_logo"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/twit"
            android:src="@drawable/logo_twitter" />

        <ImageView
            android:id="@+id/radio_twit_logo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/radiohead_logo"
            android:src="@drawable/radiohead_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtTwit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/loading"
            android:textColor="@color/CadetBlue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtTwitCreated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twit_created"
                android:textColor="@color/Gainsboro"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtTwitTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/Gainsboro"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:background="@color/LightSteelBlue" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtTwit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/loading"
            android:textColor="@color/CadetBlue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtTwitCreated2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twit_created"
                android:textColor="@color/Gainsboro"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtTwitTime2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/Gainsboro"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:background="@color/LightSteelBlue" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtTwit3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/loading"
            android:textColor="@color/CadetBlue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtTwitCreated3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twit_created"
                android:textColor="@color/Gainsboro"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtTwitTime3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/Gainsboro"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:background="@color/LightSteelBlue" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtTwit4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/loading"
            android:textColor="@color/CadetBlue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtTwitCreated4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twit_created"
                android:textColor="@color/Gainsboro"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtTwitTime4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/Gainsboro"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:background="@color/LightSteelBlue" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtTwit5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/loading"
            android:textColor="@color/CadetBlue"
            android:textStyle="bold"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtTwitCreated5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twit_created"
                android:textColor="@color/Gainsboro"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtTwitTime5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/Gainsboro"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:background="@color/LightSteelBlue" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
</ScrollView>